--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </div>
 
   </section>
-  </div> <br><br><br>
+  </div> <br>
 <hr class="horiline">
 
             <!-- SERVICES  -->
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><br><br><br>
 
     <!-- skills & tech stack  -->
     <div class="services" id="servicescontainer">
